
Copyright (c) 1998-2011 Paulo Moura.        All Rights Reserved.
Logtalk is free software.  You can redistribute it and/or modify
it under the terms of the "Artistic License 2.0" as published by 
The Perl Foundation. Consult the "LICENSE.txt" file for details.
================================================================


RELEASE NOTES
=============


2.43.3 - November ??, 2011




2.43.2 - October 4, 2011

    Optimized the processing of operator declarations when compiling source
    files and dynamically creating new entities.

    Updated the Logtalk compiler to use the "modules" compiler flag when
    testing for Prolog module support, thus avoid compilation issues with
    back-end Prolog compilers that don't support a module system but still
    define (:)/2 as a built-in control construct or predicate.

    Removed support for the "startup_message" compiler flag "flags(compact)"
    and "flags(verbose)" values, replaced by a single value, "flags", which
    corresponds to the old "flags(compact)" value.

    Corrected a bug when using op/3 directives with the create_protocol/3,
    create_object/4, and create_category/4 built-in predicates where the
    local operator declarations would be visible outside the new entities.

    Corrected a bug where creating a new dynamic entity at runtime would
    define a no longer used bookkeeping dynamic predicate that would not
    be abolished when the entity is abolished.

    Corrected a compiler bug where a "super" call from within an object that
    only instantiates itself and doesn't specialize any object would throw an
    exception instead of failing.

    Updated the "benchmarks" example in order to protect against arithmetic
    exceptions when computing the total number of calls per second for each
    test. Reduced the number of benchmark test repetitions when running the
    unit tests to avoid lengthy computing times with slow back-end Prolog
    compilers.


2.43.1 - September 12, 2011
